--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -39,8 +39,11 @@
             <li class="nav-item text-center">
               <a class="nav-link" href="#Skills">Skills</a>
             </li>
+            <!-- <li class="nav-item text-center">
+              <a class="nav-link" href="#Education">Education</a> -->
+            </li>
             <li class="nav-item text-center">
-              <a class="nav-link" href="#Education">Education</a>
+              <a class="nav-link" href="#Contact">Contact</a>
             </li>
           </ul>
           <hr class="bg-light ms-3 d-flex d-sm-none">
@@ -137,6 +140,7 @@
     <section id="Proyects">
       <div class="container col-xxl-8 py-4 container-proyect overflow-hidden">
         <h2 class="proyects-Subtitle">Some projects</h2>
+        <div class="row container flex-lg-row align-items-center g-ms-5 py-0 justify-content-end">
           <div class="row container flex-lg-row align-items-center g-ms-5 py-0 justify-content-end">
             <div class="col text-light">
               <div class="row flex-lg-row align-items-center g-5 py-0 justify-content-end containerimg">
@@ -144,10 +148,13 @@
               loading="lazy">
               </div>
             </div>
-            <div class="col text-light text-center text-md-end">
+            <div class="col text-light text-center  mt-4 mt-md-1 text-md-end">
               <h3>Soy Hostel</h3>
-              <p class="text-center text-md-end"">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat sunt, mollitia incidunt similique, in qui culpa molestiae dicta distinctio quo iste! Ex aliquid minima illo ea hic laboriosam numquam enim?</p>
-              <p>PostgreSql, Node, Express, JWT, React</p>
+              <p class="text-center text-md-end"">Proyecto integrador final desarrollado en el BootCamp soy Herry.
+                Trata de una plataforma de gestión de reservas para un albergue.
+                Desarrollado en base a una arquitectura limpia en el servidor express. 
+              </p>
+              <p>PostgreSql, Node, Express, React, JWT, PAssport, Heroku, javascript</p>
               <ul class="navbar-nav flex-row flex-nowrap text-light redes justify-content-center justify-content-md-end">
                 <li class="nav-item col-4 col-md-auto text-center m-2">
                   <a href="" title="Git Hub">
@@ -156,7 +163,7 @@
                   </a>
                 </li>
                 <li class="nav-item col-4 col-md-auto text-center m-2">
-                  <a href="" title="Redirect">
+                  <a href="https://soyhostel.com/" about="" title="Redirect">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-external-link"  viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
                       <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                       <path d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5" />
@@ -167,110 +174,153 @@
                 </li>
               </ul>
             </div>
+          </div>
+        </div>
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-0 justify-content-end-">
+          <div class="col text-light">
+            <div class="row flex-lg-row align-items-center g-5 py-0 justify-content-end">
+              <img src="assets/imgs-proyects/recipes.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+            loading="lazy">
             </div>
-          <div class="row flex-lg-row-reverse align-items-center g-5 py-0 justify-content-end-">
-            <div class="col text-light">
-              <div class="row flex-lg-row align-items-center g-5 py-0 justify-content-end">
-                <img src="assets/imgs-proyects/recipes.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
-              loading="lazy">
-              </div>
-            </div>
-            <div class="col text-light">
-              <h3>Recipes</h3>
-              <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat sunt, mollitia incidunt similique, in qui culpa molestiae dicta distinctio quo iste! Ex aliquid minima illo ea hic laboriosam numquam enim?</p>
-              <p>PostgreSql, Node, Express, JWT, React</p>
-              <ul class="navbar-nav flex-row flex-nowrap text-light redes ">
-                <li class="nav-item col-4 col-md-auto text-center m-2">
-                  <a href="" title="GitHub">
-                    <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github icon">
-                      <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
-                  </a>
-                </li>
-                <li class="nav-item col-4 col-md-auto text-center m-2">
-                  <a href="" title="Redirect">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-external-link"  viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                      <path d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5" />
-                      <line x1="10" y1="14" x2="20" y2="4" />
-                      <polyline points="15 4 20 4 20 9" />
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-            </div>
-            </div>
-          <div class="row flex-lg-row align-items-center g-5 py-0 justify-content-end">
-            <div class="col text-light">
-              <div class="row flex-lg-row align-items-center g-5 py-0 justify-content-end">
-                <img src="assets/imgs-proyects/fundacion-colombiavive.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
-              loading="lazy">
-              </div>
-            </div>
-            <div class="col text-light text-end">
-              <h3>FunColVive</h3>
-              <p class="text-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat sunt, mollitia incidunt similique, in qui culpa molestiae dicta distinctio quo iste! Ex aliquid minima illo ea hic laboriosam numquam enim?</p>
-              <p>PostgreSql, Node, Express, JWT, React</p>
-              <ul class="navbar-nav flex-row flex-nowrap text-light redes justify-content-end">
-                <li class="nav-item col-4 col-md-auto text-center m-2">
-                  <a href="" title="GitHub">
-                    <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github icon">
-                      <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
-                  </a>
-                </li>
-                <li class="nav-item col-4 col-md-auto text-center m-2">
-                  <a href="" title="Redirect">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-external-link"  viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                      <path d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5" />
-                      <line x1="10" y1="14" x2="20" y2="4" />
-                      <polyline points="15 4 20 4 20 9" />
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-            </div>
-            </div>
-          <div class="row flex-lg-row-reverse align-items-center g-5 py-0 justify-content-end">
-            <div class="col text-light">
-              <div class="row flex-lg-row align-items-center g-5 py-0 justify-content-end">
-                <img src="assets/imgs-proyects/san-martin.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
-              loading="lazy">
-              </div>
-            </div>
-            <div class="col text-light">
-              <h3>San Martin</h3>
-              <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat sunt, mollitia incidunt similique, in qui culpa molestiae dicta distinctio quo iste! Ex aliquid minima illo ea hic laboriosam numquam enim?</p>
-              <p>PostgreSql, Node, Express, JWT, React</p>
-              <ul class="navbar-nav flex-row flex-nowrap text-light redes ">
-                <li class="nav-item col-4 col-md-auto text-center m-2">
-                  <a href="" title="GitHub">
-                    <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github icon">
-                      <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
-                  </a>
-                </li>
-                <li class="nav-item col-4 col-md-auto text-center m-2">
-                  <a href="" title="Redirect">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-external-link"  viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                      <path d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5" />
-                      <line x1="10" y1="14" x2="20" y2="4" />
-                      <polyline points="15 4 20 4 20 9" />
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-            </div>
-            </div>
+          </div>
+          <div class="col text-light">
+            <h3>Recipes</h3>
+            <p class="">Aplicación en la cual se pueden ver distintas recetas de comida junto con información relevante de las mismas utilizando la api externa spoonacular usando solo el pedido de recetas y a partir de ella poder buscar recetas, Filtrarlos / Ordenarlos y Crear nuevas recetas propias</p>
+            <p>PostgreSql, Sequelize, Node, Express, React, Redux, Heroku, javascript</p>
+            <ul class="navbar-nav flex-row flex-nowrap text-light redes ">
+              <li class="nav-item col-4 col-md-auto text-center m-2">
+                <a href="" title="GitHub">
+                  <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github icon">
+                    <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+                </a>
+              </li>
+              <li class="nav-item col-4 col-md-auto text-center m-2">
+                <a href="" title="Redirect">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-external-link"  viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5" />
+                    <line x1="10" y1="14" x2="20" y2="4" />
+                    <polyline points="15 4 20 4 20 9" />
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
     </section>
-    <section id="Education" class="bg-info">
+    <!-- <section id="Education" class="bg-info">
       <h2>Education</h2>
-    </section>
+    </section> -->
     <section id="Skills">
-      <h2>Hard and Soft Skills</h2>
-
+      <div class="container col-xxl-8 py-4 container-proyect overflow-hidden">
+        <h2 class="skills-Subtitle">Hard and Soft Skills</h2>
+        <p> Me encanta aprender cosas nuevas y experimentar con nuevas tecnologías.
+          Estos son algunos de los principales lenguajes, tecnologías, herramientas y plataformas con los que trabajo:</p>
+        <div class="container-skills container flex-lg-row align-items-center g-ms-5 py-0 justify-content-end">
+          <div class="d-flex container-technologies-section">
+              <h3>Lenguajes & DataBases</h3>
+              <div class="d-flex">
+                  <article class="icons html5">
+                      <img src="/assets/icons/html.svg" alt="Html5" title="Html5">
+                      <h3>Html5</h3>
+                  </article>
+                  <article class="icons css">
+                    <img src="/assets/icons/css3.svg" alt="Css3" title="Css3">
+                    <h3>Css3</h3>
+                  </article>
+                  <article class="icons Js">
+                    <img src="/assets/icons/javascript.svg" alt="Javascript" title="Javascript">
+                    <h3>Javascript</h3>
+                  </article>
+                  <article class="icons Ts">
+                      <img src="/assets/icons/ts.svg" alt="TypeScript" title="TypeScript">
+                      <h3>TypeScript</h3>
+                  </article>
+                  <article class="icons postgresql">
+                      <img src="/assets/icons/postgresql.svg" alt="PostgreSql" title="PostgreSql">
+                      <h3>PostgreSql</h3>
+                  </article>
+                  <article class="icons mysql">
+                      <img src="/assets/icons/mysql.svg" alt="MySql" title="MySql">
+                      <h3>MySqlDb</h3>
+                  </article>
+                  <article class="icons mongo">
+                      <img src="/assets/icons/mongodb.svg" alt="MongoDb" title="MongoDb">
+                      <h3>MongoDb</h3>
+                  </article>
+              </div>
+          </div>
+          <div class="d-flex container-technologies-section">
+              <h3>Framework & Tegnologies</h3>
+              <div class="d-flex">
+                  <article class="icons bootstrap">
+                      <img src="/assets/icons/bootstrap (1).svg" alt="Bootstrap" title="Bootstrap">
+                      <h3>Bootstrap</h3>
+                  </article>
+                  <article class="icons React">
+                      <img src="/assets/icons/react.svg" alt="React" title="React">
+                      <h3>React</h3>
+                  </article>
+                  <article class="icons redux">
+                      <img src="/assets/icons/redux-svgrepo-com.svg" alt="Redux" title="Redux">
+                      <h3>Redux</h3>
+                  </article>
+                  <article class="icons node">
+                      <img src="/assets/icons/nodejs.svg" alt="NodeJs" title="NodeJs">
+                      <h3>NodeJs</h3>
+                  </article>
+                  <article class="icons sass">
+                      <img src="/assets/icons/sass.svg" alt="Sass" title="Sass">
+                      <h3>Sass</h3>
+                  </article>
+              </div>
+          </div>
+          <div class="d-flex container-technologies-section">
+              <h3>Tools & Others</h3>
+              <div class="d-flex flex-wrap">
+                  <article class="icons git">
+                      <img src="/assets/icons/git.svg" alt="Git" title="Git">
+                      <h3>Git</h3>
+                  </article>
+                  <article class="icons scrum">
+                      <img src="/assets/icons/scrum.svg" alt="Scrum" title="Scrum">
+                      <h3>Scrum</h3>
+                  </article>
+                  <article class="icons wordpress">
+                      <img src="/assets/icons/wordpress.svg" alt="Wordpress" title="Wordpress">
+                      <h3>Wordpress</h3>
+                  </article>
+              </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="Contact" class="">
+      <div class="container col-xxl-8 py-4 container-proyect overflow-hidden">
+        <h2 class="contac-subtitle">Get in touch</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus quae quod itaque fugiat inventore iste nisi nulla molestias culpa facilis saepe unde quam atque ea voluptas illum quaerat, laborum explicabo.</p>
+        <ul class="d-flex navbar-nav flex-row justify-content-center flex-nowrap text-light redes">
+          <li class="nav-item col-2 col-md-aut text-center m-2">
+            <a href="" title="Facebook">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" viewBox="0 0 24 24"  fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
+              </svg>
+            </a>
+          </li>
+          <li class="nav-item col-2 col-md-auto text-center m-2">
+            <a href="" title="Send Mail">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" viewBox="0 0 24 24" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <rect x="3" y="5" width="18" height="14" rx="2" />
+                <polyline points="3 7 12 13 21 7" />
+              </svg>
+            </a>
+          </li>
+          
+        </ul>
+      </div>
     </section>
   </main>
 
