--- a/index.html
+++ b/index.html
@@ -222,31 +222,31 @@
               <h3>Lenguajes & DataBases</h3>
               <div class="d-flex">
                   <article class="icons html5">
-                      <img src="/assets/icons/html.svg" alt="Html5" title="Html5">
+                      <img src="assets/icons/html.svg" alt="Html5" title="Html5">
                       <h3>Html5</h3>
                   </article>
                   <article class="icons css">
-                    <img src="/assets/icons/css3.svg" alt="Css3" title="Css3">
+                    <img src="assets/icons/css3.svg" alt="Css3" title="Css3">
                     <h3>Css3</h3>
                   </article>
                   <article class="icons Js">
-                    <img src="/assets/icons/javascript.svg" alt="Javascript" title="Javascript">
+                    <img src="assets/icons/javascript.svg" alt="Javascript" title="Javascript">
                     <h3>Javascript</h3>
                   </article>
                   <article class="icons Ts">
-                      <img src="/assets/icons/ts.svg" alt="TypeScript" title="TypeScript">
+                      <img src="assets/icons/ts.svg" alt="TypeScript" title="TypeScript">
                       <h3>TypeScript</h3>
                   </article>
                   <article class="icons postgresql">
-                      <img src="/assets/icons/postgresql.svg" alt="PostgreSql" title="PostgreSql">
+                      <img src="assets/icons/postgresql.svg" alt="PostgreSql" title="PostgreSql">
                       <h3>PostgreSql</h3>
                   </article>
                   <article class="icons mysql">
-                      <img src="/assets/icons/mysql.svg" alt="MySql" title="MySql">
+                      <img src="assets/icons/mysql.svg" alt="MySql" title="MySql">
                       <h3>MySqlDb</h3>
                   </article>
                   <article class="icons mongo">
-                      <img src="/assets/icons/mongodb.svg" alt="MongoDb" title="MongoDb">
+                      <img src="assets/icons/mongodb.svg" alt="MongoDb" title="MongoDb">
                       <h3>MongoDb</h3>
                   </article>
               </div>
@@ -255,23 +255,23 @@
               <h3>Framework & Tegnologies</h3>
               <div class="d-flex">
                   <article class="icons bootstrap">
-                      <img src="/assets/icons/bootstrap (1).svg" alt="Bootstrap" title="Bootstrap">
+                      <img src="assets/icons/bootstrap (1).svg" alt="Bootstrap" title="Bootstrap">
                       <h3>Bootstrap</h3>
                   </article>
                   <article class="icons React">
-                      <img src="/assets/icons/react.svg" alt="React" title="React">
+                      <img src="assets/icons/react.svg" alt="React" title="React">
                       <h3>React</h3>
                   </article>
                   <article class="icons redux">
-                      <img src="/assets/icons/redux-svgrepo-com.svg" alt="Redux" title="Redux">
+                      <img src="assets/icons/redux-svgrepo-com.svg" alt="Redux" title="Redux">
                       <h3>Redux</h3>
                   </article>
                   <article class="icons node">
-                      <img src="/assets/icons/nodejs.svg" alt="NodeJs" title="NodeJs">
+                      <img src="assets/icons/nodejs.svg" alt="NodeJs" title="NodeJs">
                       <h3>NodeJs</h3>
                   </article>
                   <article class="icons sass">
-                      <img src="/assets/icons/sass.svg" alt="Sass" title="Sass">
+                      <img src="assets/icons/sass.svg" alt="Sass" title="Sass">
                       <h3>Sass</h3>
                   </article>
               </div>
@@ -280,15 +280,15 @@
               <h3>Tools & Others</h3>
               <div class="d-flex flex-wrap">
                   <article class="icons git">
-                      <img src="/assets/icons/git.svg" alt="Git" title="Git">
+                      <img src="assets/icons/git.svg" alt="Git" title="Git">
                       <h3>Git</h3>
                   </article>
                   <article class="icons scrum">
-                      <img src="/assets/icons/scrum.svg" alt="Scrum" title="Scrum">
+                      <img src="assets/icons/scrum.svg" alt="Scrum" title="Scrum">
                       <h3>Scrum</h3>
                   </article>
                   <article class="icons wordpress">
-                      <img src="/assets/icons/wordpress.svg" alt="Wordpress" title="Wordpress">
+                      <img src="assets/icons/wordpress.svg" alt="Wordpress" title="Wordpress">
                       <h3>Wordpress</h3>
                   </article>
               </div>
