--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,36 +27,37 @@
         <div class="collapse navbar-collapse desplegable " id="menu">
           <ul class="nav navbar-nav  me-auto primary-menu" role="tablist">
             <li class="nav-item text-center">
-              <a class="nav-link active" href="/">Home</a>
+              <a class="nav-link active" href="/">Inicio</a>
             </li>
             <li class="nav-item text-center">
-              <a class="nav-link" href="#About">About me</a>
+              <a class="nav-link" href="#About">Sobre <i class="fa fa-microchip" aria-hidden="true"></i></a>
             </li>
             <li class="nav-item text-center">
-              <a class="nav-link" href="#Proyects">Proyects</a>
+              <a class="nav-link" href="#Proyects">Proyectos</a>
             </li>
             <li class="nav-item text-center">
-              <a class="nav-link" href="#Skills">Skills</a>
+              <a class="nav-link" href="#Skills">Habilades</a>
             </li>
             <!-- <li class="nav-item text-center">
               <a class="nav-link" href="#Education">Education</a> -->
             </li>
             <li class="nav-item text-center">
-              <a class="nav-link" href="#Contact">Contact</a>
+              <a class="nav-link" href="#Contact">Contacto</a>
             </li>
           </ul>
           <hr class="bg-light ms-3 d-flex d-sm-none">
           <ul class="navbar-nav flex-row flex-wrap text-light redes ms-3 d-flex d-md-none">
             <li class="nav-item col-4 col-md-aut text-center">
-              <a href="" title="Facebook">
-                <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-facebook" viewBox="0 0 16 16">
-                  <path
-                    d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+              <a href="mailto:priscilla.k.rojas@hotmail.com?subject=Me%20gustaría%20contactarte" title="Enviar Mail">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" viewBox="0 0 24 24" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                  <rect x="3" y="5" width="18" height="14" rx="2"></rect>
+                  <polyline points="3 7 12 13 21 7"></polyline>
                 </svg>
               </a>
             </li>
             <li class="nav-item col-4 col-md-auto text-center">
-              <a href="" title="Git Hub">
+              <a href="https://github.com/Priscilla-Rojas" title="Git Hub">
                 <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-github" viewBox="0 0 16 16">
                   <path
                     d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
@@ -65,7 +65,7 @@
               </a>
             </li>
             <li class="nav-item col-4 col-md-auto text-center">
-              <a href="" title="Linkedin">
+              <a href="https://www.linkedin.com/in/priscilla-k-rojas/" title="Linkedin">
                 <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-linkedin" viewBox="0 0 24 24">
                   <path
                     d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 16h-2v-6h2v6zm-1-6.891c-.607 0-1.1-.496-1.1-1.109 0-.612.492-1.109 1.1-1.109s1.1.497 1.1 1.109c0 .613-.493 1.109-1.1 1.109zm8 6.891h-1.998v-2.861c0-1.881-2.002-1.722-2.002 0v2.861h-2v-6h2v1.093c.872-1.616 4-1.736 4 1.548v3.359z" />
@@ -74,9 +74,10 @@
             </li>
           </ul>
         </div>
+        <a class="cv" href="assets/Priscilla-Rojas-FullStack.pdf" target="_blanck">Resumen</a>
         <form class="login ms-2">
-          <button class="btn btn-outline-light border-0 d-md-inline-block ms-1" type="submit">Login</button>
-          <button class="btn btn-outline-light border-0 d-md-inline-block ms-1" type="submit">Register</button>
+          <!-- <button class="btn btn-outline-light border-0 d-md-inline-block ms-1" type="submit">Login</button>
+          <button class="btn btn-outline-light border-0 d-md-inline-block ms-1" type="submit">Register</button> -->
         </form>
       </div>
     </nav>
@@ -88,23 +89,22 @@
     <section class="redes-nav d-none d-md-block">
       <ul class="navbar-nav flex-column flex-nowrap text-light redes">
         <li class="nav-item col-4 col-md-aut text-center m-2">
-          <a href="" title="Facebook">
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook"
-              viewBox="0 0 24 24" stroke-width="2"  fill="none" stroke-linecap="round" stroke-linejoin="round">
-              <title>Facebook</title>
-              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-              <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
+          <a href="mailto:priscilla.k.rojas@hotmail.com?subject=Me%20gustaría%20contactarte" title="Enviar Mail">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" viewBox="0 0 24 24" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+              <rect x="3" y="5" width="18" height="14" rx="2"></rect>
+              <polyline points="3 7 12 13 21 7"></polyline>
             </svg>
           </a>
         </li>
         <li class="nav-item col-4 col-md-auto text-center m-2">
-          <a href="" title="Git Hub">
+          <a href="https://github.com/Priscilla-Rojas" title="Git Hub">
             <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github icon"><title>GitHub</title>
               <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
           </a>
         </li>
         <li class="nav-item col-4 col-md-auto text-center m-2">
-          <a href="" title="Linkedin">
+          <a href="https://www.linkedin.com/in/priscilla-k-rojas/" title="Linkedin">
             <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin icon"><title>LinkedIn</title><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
           </a>
         </li>
@@ -114,7 +114,7 @@
       <div class="container col-xxl-8 px-4 py-4">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-0 justify-content-center">
           <div class="col-lg-10 text-light herotext">
-            <span class="hi">Hi! I'm </span>
+            <span class="hi">Hola! soy </span>
             <h1 class="display-1 fw-bold mb-3 ">Priscilla Rojas.</h1>
             <h3 class="display-3 fw-bold mb-3 text-muted">Full Stack Developer.</h3>
             <p class="text">Curiosa, responsable y perfeccionista. Motivada a encontrar soluciones y crecer continuamente dondequiera que esté, tomando cada desafío como una oportunidad para mejorar.</p>
@@ -130,15 +130,16 @@
               loading="lazy">
           </div>
           <div class="col-lg-6 text-light">
-            <h2 class="about-Subtitle">About me</h2>
-            <p class="text ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, earum cumque! Numquam consequuntur deleniti natus voluptate ab, porro dolores veniam sint, illo eligendi, nisi ipsum eum quaerat. Labore, alias repellat.
-            Possimus nihil recusandae a harum temporibus impedit error voluptate eligendi consequatur distinctio! Autem minus eum magni incidunt impedit repellendus, modi distinctio, error quibusdam eos voluptate officia et, dignissimos est magnam!0</p>
+            <h2 class="about-Subtitle">Sobre mi</h2>
+            <p class="text ">Hola me llamo Priscilla ROjas, soy desarrolladora Full Stack. Realicé el bootcamp de Soy Henry, donde he adquirido experiencia académica en programación con proyectos reales, tanto individuales como grupales, con más de 800hs de codeo. Me gusta aprender cosas nuevas, soy muy curiosa 👀 por lo que disfruto el constante aprendizaje. Me gusta trabajar en grupo, me encanta compartir y debatir ideas, siento en ese momento es donde salen las mejores ideas.
+              Me gusta mucho la lógica y me gusta sentarme y analizar las cosas desde distintos puntos de vista.  Descubrí el la programación mi pasión, un mundo en el cual puedo aprender contantemente y superar desafíos día a día.
+              </p>
           </div>
         </div>
       </div>
     </section>
     <section id="Proyects">
-      <div class="container col-xxl-8 py-4 container-proyect overflow-hidden">
+      <div class="container col-xxl-8 py-4 overflow-hidden">
         <h2 class="proyects-Subtitle">Some projects</h2>
         <div class="row container flex-lg-row align-items-center g-ms-5 py-0 justify-content-end">
           <div class="row container flex-lg-row align-items-center g-ms-5 py-0 justify-content-end">
@@ -157,7 +158,7 @@
               <p>PostgreSql, Node, Express, React, JWT, PAssport, Heroku, javascript</p>
               <ul class="navbar-nav flex-row flex-nowrap text-light redes justify-content-center justify-content-md-end">
                 <li class="nav-item col-4 col-md-auto text-center m-2">
-                  <a href="" title="Git Hub">
+                  <a href="https://github.com/Priscilla-Rojas/pf-hostel" title="Git Hub">
                     <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github icon">
                       <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
                   </a>
@@ -184,12 +185,12 @@
             </div>
           </div>
           <div class="col text-light">
-            <h3>Recipes</h3>
+            <h3>App Recetas</h3>
             <p class="">Aplicación en la cual se pueden ver distintas recetas de comida junto con información relevante de las mismas utilizando la api externa spoonacular usando solo el pedido de recetas y a partir de ella poder buscar recetas, Filtrarlos / Ordenarlos y Crear nuevas recetas propias</p>
             <p>PostgreSql, Sequelize, Node, Express, React, Redux, Heroku, javascript</p>
             <ul class="navbar-nav flex-row flex-nowrap text-light redes ">
               <li class="nav-item col-4 col-md-auto text-center m-2">
-                <a href="" title="GitHub">
+                <a href="https://github.com/Priscilla-Rojas/PI" title="GitHub">
                   <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github icon">
                     <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
                 </a>
@@ -214,12 +215,12 @@
     </section> -->
     <section id="Skills">
       <div class="container col-xxl-8 py-4 container-proyect overflow-hidden">
-        <h2 class="skills-Subtitle">Hard and Soft Skills</h2>
+        <h2 class="skills-Subtitle">Habilidades Técnicas</h2>
         <p> Me encanta aprender cosas nuevas y experimentar con nuevas tecnologías.
           Estos son algunos de los principales lenguajes, tecnologías, herramientas y plataformas con los que trabajo:</p>
         <div class="container-skills container flex-lg-row align-items-center g-ms-5 py-0 justify-content-end">
           <div class="d-flex container-technologies-section">
-              <h3>Lenguajes & DataBases</h3>
+              <h3>Lenguajes & Bases de Datos</h3>
               <div class="d-flex">
                   <article class="icons html5">
                       <img src="assets/icons/html.svg" alt="Html5" title="Html5">
@@ -252,7 +253,7 @@
               </div>
           </div>
           <div class="d-flex container-technologies-section">
-              <h3>Framework & Tegnologies</h3>
+              <h3>Framework & Librerias</h3>
               <div class="d-flex">
                   <article class="icons bootstrap">
                       <img src="assets/icons/bootstrap (1).svg" alt="Bootstrap" title="Bootstrap">
@@ -277,7 +278,7 @@
               </div>
           </div>
           <div class="d-flex container-technologies-section">
-              <h3>Tools & Others</h3>
+              <h3>Otros</h3>
               <div class="d-flex flex-wrap">
                   <article class="icons git">
                       <img src="assets/icons/git.svg" alt="Git" title="Git">
@@ -297,20 +298,17 @@
       </div>
     </section>
     <section id="Contact" class="">
-      <div class="container col-xxl-8 py-4 container-proyect overflow-hidden">
-        <h2 class="contac-subtitle">Get in touch</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus quae quod itaque fugiat inventore iste nisi nulla molestias culpa facilis saepe unde quam atque ea voluptas illum quaerat, laborum explicabo.</p>
-        <ul class="d-flex navbar-nav flex-row justify-content-center flex-nowrap text-light redes">
+      <div class="container col-xxl-8 py-4 overflow-hidden">
+        <h2 class="contac-subtitle">Contactémonos</h2>
+        <p>Actuamente me encuentro en la busqueda laboral. Sí buscas una persona proactiva, curiosa, enfocada, con gran capacidad de trabajo en equipo, resolutiva y enfocada en resultados, o simplemente queres chralar, no dudes en contactarme.  </p>
+        <ul class="d-flex navbar-nav flex-row justify-content-center flex-nowrap text-light redes contact-Icons">
           <li class="nav-item col-2 col-md-aut text-center m-2">
-            <a href="" title="Facebook">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" viewBox="0 0 24 24"  fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
-              </svg>
+            <a href="" title="Linkedin">
+              <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin icon"><title>LinkedIn</title><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
             </a>
           </li>
           <li class="nav-item col-2 col-md-auto text-center m-2">
-            <a href="" title="Send Mail">
+            <a href="mailto:priscilla.k.rojas@hotmail.com?subject=Me%20gustaría%20contactarte" title="Send Mail">
               <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" viewBox="0 0 24 24" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                 <rect x="3" y="5" width="18" height="14" rx="2" />
